# wicked-core

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  HANDOFF.md  ORCHESTRATOR.md  README.md  REASSESS-P0-P1.md
.github/workflows/: ci.yml  napi-release.yml
.product/: DES-COUNCIL-SKILL-001.md  DES-EXEC-001-event-driven-workflow-execution.md  DES-OUTGOV-001-output-governance.md  DES-OUTGOV-002-remaining-plan.md  DES-OUTGOV-003-governance-in-run.md  DES-OUTGOV-005-coverage-emitter.md  DES-OUTGOV-006-populate-rules.md  DES-OUTGOV-007-end-to-end-run.md  RAID.md  REQ-001-application-overview.md  REQ-005-dod-criteria.md  TEST-001-test-strategy.md
.product/reviews/: adversarial-review-reassess-round2.md
.wicked-testing/: config.json
.wicked-testing/evidence/34656084-fd1b-4804-843e-3139f411afea/: annotate-1-output.txt  domgraph-stdout.txt  evidence.json  index-output.txt  manifest.json  requirements_graph.json  test-plan.md
.wicked-testing/evidence/3ab2e687-2098-4367-91ff-3fe4de8fb188/: case-a-no-decisions.txt  case-a-output.txt  case-b-output.txt  evidence.json  manifest.json  step1-fixture.txt  test-plan.md
.wicked-testing/evidence/4f893526-3610-403e-852e-d5676a147d08/: coverage-cmd-stdout.txt  domgraph-fail-output.txt  evidence.json  ls-output.txt  manifest.json  setup-index.txt  test-plan.md
.wicked-testing/evidence/a37e5f6e-b85f-4325-93dd-ce8fe5e23bec/: coverage-check.txt  domgraph-fail-stdout.txt  evidence.json  index-output.txt  ls-output.txt  manifest.json  test-plan.md
.wicked-testing/evidence/a53a6024-0635-4543-bf43-a619e3009e26/: .tmpdir_base  annotate-2-output.txt  coverage-stdout.txt  evidence.json  index-output.txt  manifest.json  test-plan.md
.wicked-testing/evidence/core-l3-5-20260721/: manifest.json  step1-serve-start.txt  step2-create-run.json  step3-runs-full.json  step3-runs-summary.txt  step4-health.json  step5-shutdown.txt  verdict.json
.wicked-testing/projects/: df18ca77-745b-4c3a-ba56-b3fb0481e49f.json
.wicked-testing/runs/: 34656084-fd1b-4804-843e-3139f411afea.json  3ab2e687-2098-4367-91ff-3fe4de8fb188.json  4f893526-3610-403e-852e-d5676a147d08.json  a37e5f6e-b85f-4325-93dd-ce8fe5e23bec.json  a53a6024-0635-4543-bf43-a619e3009e26.json
.wicked-testing/scenarios/: 3d0e68e0-d95c-490a-a9b3-5366d78bc095.json  8514f10d-f65c-4dfe-9874-557e965548fe.json  97dadaa1-ccda-4985-93eb-92fda1e4dc95.json  coverage-emitter.md  crew-governed-run.md  domain-graph-fail-closed.md  domain-graph-happy-path.md  f992efbd-d18d-428d-ae68-fd0c96ee7fe5.json  gate-hook-fail-closed.md
.wicked-testing/verdicts/: 77e600fd-adb6-4724-84e0-4800e08978f1.json  79c34996-06fe-455c-99a4-dddc3691bf36.json  9efcb254-9115-43b6-bf41-b83a76b22fba.json  a6373f13-446a-4c3f-919c-c7f4e87ed5d8.json  f4207fa2-c69e-4cbb-97fe-acab0bb56b9a.json
crates/wicked-apps-core/: Cargo.toml
crates/wicked-apps-core/src/: emit.rs  lib.rs  store_any.rs
crates/wicked-core-ts/: .gitignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  smoke-lifecycle.mjs  smoke-terminal.mjs  smoke.mjs
crates/wicked-core-ts/.cargo/: config.toml
crates/wicked-core-ts/scripts/: finalize-dts.mjs
crates/wicked-core-ts/src/: lib.rs
crates/wicked-council/: Cargo.toml
crates/wicked-council/src/: bus.rs  dispatch.rs  ids.rs  lib.rs  probe.rs  registry.rs  store.rs  synthesis.rs  types.rs  worker.rs
crates/wicked-governance/: Cargo.toml
crates/wicked-governance/src/: conformance.rs  domain.rs  domain_model.rs  engine.rs  ingest.rs  lib.rs
crates/wicked-orchestration/: Cargo.toml
crates/wicked-orchestration/src/: gate.rs  lib.rs  reducer.rs  runner.rs  transitions.rs
scripts/: gate_eval_daemon.py
src/: acp_runner.rs  actor.rs  applications.rs  bus.rs  campaign.rs  cli_runner.rs  code_graph.rs  command.rs  distribute.rs  docs.rs  domain.rs  domain_extraction.rs  event.rs  execute.rs  execute_wrapped.rs  gate_hook.rs  graph_browser.rs  knowledge.rs  lib.rs  memory.rs  pipeline.rs  plan.rs  repo.rs  repo_intel.rs  scope.rs  session_runner.rs  sources.rs  terminal.rs  validator.rs  validator_vault.rs  workflow.rs
tests/: bus_bridge.rs  cli_smoke.rs  coverage.schema.json  coverage_cli.rs  coverage_schema.rs  domain_extraction_e2e.rs  domain_model_schema.rs  events_foundation.rs  events_governance_deep.rs  exec_seam.rs  governance_in_run.rs  operator_api.rs  p0_single_writer.rs  p10_methodology.rs  p11_code_graph.rs  p12_sources.rs  p13_campaign.rs  p14_gate_phase.rs  p1_reentrant.rs  p2_contract.rs  p2_gates.rs  p2_worker_lifecycle.rs  p3_repo.rs  p4a_wrapped.rs  p8_memory.rs  p9_knowledge.rs  pc_output_gate.rs  rules_ingest.rs  schema_vendor_pin.rs  seam_findings.rs  skills_live.rs  terminal.rs  terminal_worker_session.rs  zz_mem.rs
workflows/: README.md  bug.json  chat.json  domain-extraction.json  domain-graph-slice.json  feature.json  memories.json  migration.json  repo-graph.json  survey-repo.json
