[package]
name = "wicked-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "In-process composition runtime for the wicked-estate core services: a single-writer store actor + command API + live event stream that the agent, UI, and MCP servers compose through, instead of each re-opening and racing on the shared SQLite file."

[lib]
name = "wicked_core"
path = "src/lib.rs"

# Thin operator CLI over the COE library — the agent binary's replacement entry point.
[[bin]]
name = "wicked-core"
path = "src/bin/wicked-core.rs"

[dependencies]
# The shared kernel + store seam.
# TODO(wicked-core#migrate): wicked-apps-core/governance/orchestration/council are yanked (archived
# into wicked-estate v0.13+). Cargo.lock pins still build but cargo update will break. Replace with
# wicked-estate equivalents — tracked in https://github.com/mikeparcewski/wicked-core/issues
wicked-apps-core = "0.2.0"
wicked-estate-core = "0.12.0"
# The three engines COE composes (in-process, directly — no wicked-agent dependency).
wicked-governance = "0.3.0"
wicked-orchestration = "0.3.0"
wicked-council = "0.2.0"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
# TODO(wicked-core#migrate): wicked-memory/core/knowledge-mcp absorbed into wicked-estate v0.13+.
# These tombstone versions (0.12.2/0.12.1) still build; migrate to wicked-estate-mcp subprocess.
wicked-memory = "0.12.2"
wicked-memory-core = "0.12.2"
wicked-estate-retrieve = { version = "0.12.0", features = ["model2vec"] }
wicked-knowledge-mcp = "0.12.2"
wicked-estate-rank = "0.12.0"

[dev-dependencies]
# Integration tests reach the engine crates' public APIs directly to seed policies, inject a stub
# council dispatcher, and read phase state. Same crates.io versions as above, so cargo unifies them
# to one compilation (shared types).
wicked-apps-core = "0.2.0"
wicked-governance = "0.3.0"
wicked-orchestration = "0.3.0"
wicked-council = "0.2.0"
