[package]
name = "wicked-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "In-process composition runtime for the wicked-estate core services: a single-writer store actor + command API + live event stream that the agent, UI, and MCP servers compose through, instead of each re-opening and racing on the shared SQLite file."

[lib]
name = "wicked_core"
path = "src/lib.rs"

# Thin operator CLI over the COE library — the agent binary's replacement entry point.
[[bin]]
name = "wicked-core"
path = "src/bin/wicked-core.rs"

[dependencies]
# Vendored ex-crates.io crates (yanked 0.2.0/0.3.0) — copied into crates/ and repointed onto
# wicked-estate 0.13 path deps. apps-core is the domain wrapper (ToNode/FromNode, Decision/
# ConformanceClaim, event catalog + emit seam, synthetic_symbol, convenience open_store) that has
# no estate 0.13 equivalent; the three engines COE composes build on it (in-process, no wicked-agent).
wicked-apps-core = { path = "crates/wicked-apps-core" }
wicked-governance = { path = "crates/wicked-governance" }
wicked-orchestration = { path = "crates/wicked-orchestration" }
wicked-council = { path = "crates/wicked-council" }
# wicked-estate 0.13 — local, not-yet-published; relative path deps (cross-platform, no cargo update).
wicked-estate-core = { path = "../wicked-estate/crates/wicked-estate-core" }
wicked-estate-rank = { path = "../wicked-estate/crates/wicked-estate-rank" }
wicked-estate-retrieve = { path = "../wicked-estate/crates/wicked-estate-retrieve", features = ["model2vec"] }
# Memory + knowledge migrated off tombstone wicked-memory/-core/knowledge-mcp onto estate 0.13.
wicked-estate-memory = { path = "../wicked-estate/crates/wicked-estate-memory" }
wicked-estate-memory-core = { path = "../wicked-estate/crates/wicked-estate-memory-core" }
wicked-estate-knowledge = { path = "../wicked-estate/crates/wicked-estate-knowledge" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
# Integration tests reach the engine crates' public APIs directly to seed policies, inject a stub
# council dispatcher, and read phase state. Same vendored path crates as above, so cargo unifies
# them to one compilation (shared types).
wicked-apps-core = { path = "crates/wicked-apps-core" }
wicked-governance = { path = "crates/wicked-governance" }
wicked-orchestration = { path = "crates/wicked-orchestration" }
wicked-council = { path = "crates/wicked-council" }
