[package]
name = "wicked-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "In-process composition runtime for the wicked-estate core services: a single-writer store actor + command API + live event stream that the agent, UI, and MCP servers compose through, instead of each re-opening and racing on the shared SQLite file."

[lib]
name = "wicked_core"
path = "src/lib.rs"

# Thin operator CLI over the COE library — the agent binary's replacement entry point.
[[bin]]
name = "wicked-core"
path = "src/bin/wicked-core.rs"

[dependencies]
# Vendored ex-crates.io crates (yanked 0.2.0/0.3.0) — copied into crates/ and repointed onto
# wicked-estate 0.13 path deps. apps-core is the domain wrapper (ToNode/FromNode, Decision/
# ConformanceClaim, event catalog + emit seam, synthetic_symbol, convenience open_store) that has
# no estate 0.13 equivalent; the three engines COE composes build on it (in-process, no wicked-agent).
wicked-apps-core = { path = "crates/wicked-apps-core" }
wicked-governance = { path = "crates/wicked-governance" }
wicked-orchestration = { path = "crates/wicked-orchestration" }
wicked-council = { path = "crates/wicked-council" }
# wicked-estate 0.13 — local, not-yet-published; relative path deps (cross-platform, no cargo update).
wicked-estate-core = { path = "../wicked-estate/crates/wicked-estate-core" }
wicked-estate-rank = { path = "../wicked-estate/crates/wicked-estate-rank" }
wicked-estate-retrieve = { path = "../wicked-estate/crates/wicked-estate-retrieve", features = ["model2vec"] }
# Memory + knowledge migrated off tombstone wicked-memory/-core/knowledge-mcp onto estate 0.13.
wicked-estate-memory = { path = "../wicked-estate/crates/wicked-estate-memory" }
wicked-estate-memory-core = { path = "../wicked-estate/crates/wicked-estate-memory-core" }
wicked-estate-knowledge = { path = "../wicked-estate/crates/wicked-estate-knowledge" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
# Rust↔wicked-bus bridge (DES-EXEC-001 §2.5): a direct SQLite handle to the wicked-bus event log
# (a SEPARATE db from the estate store) so core can emit/poll `wicked.*` events the JS bus reads.
# Pinned to estate's `0.32` + `bundled` so cargo unifies one libsqlite3-sys and it builds with no
# system sqlite (cross-platform: macOS/Linux/Windows).
rusqlite = { version = "0.32", features = ["bundled"] }
# PTY terminal sessions (DES-TERMINAL-001): cross-platform pseudo-terminal (unix + Windows ConPTY).
# The mechanism is lifted from the retiring egui studio's `portable-pty` usage, minus the egui/vt100
# coupling — core streams RAW bytes as events; screen emulation (vt100) is a UI concern, not core's.
portable-pty = "0.8"
# base64-encode raw PTY output bytes for the `TerminalOutput` event (CoreEvent → tagged JSON).
base64 = "0.22"

[features]
default = []
# Compile in estate's Postgres backend end-to-end (forwards to apps-core → wicked-estate-store).
# The engine is backend-agnostic (it programs against `dyn GraphStore`); this feature only decides
# which concrete backend `open_store_any` can hand it. SQLite stays the zero-infra default.
postgres = ["wicked-apps-core/postgres"]

[dev-dependencies]
# The terminal round-trip test decodes `TerminalOutput.bytes_b64` to assert the echoed bytes.
base64 = "0.22"
# Integration tests reach the engine crates' public APIs directly to seed policies, inject a stub
# council dispatcher, and read phase state. Same vendored path crates as above, so cargo unifies
# them to one compilation (shared types).
wicked-apps-core = { path = "crates/wicked-apps-core" }
wicked-governance = { path = "crates/wicked-governance" }
wicked-orchestration = { path = "crates/wicked-orchestration" }
wicked-council = { path = "crates/wicked-council" }
