[package]
name = "wicked-governance"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Vendored into wicked-core (was crates.io 0.3.0, yanked). Deterministic policy/decision engine over the wicked-estate graph."
publish = false

[dependencies]
wicked-apps-core = { path = "../wicked-apps-core" }
wicked-estate-core = { path = "../../../wicked-estate/crates/wicked-estate-core" }
wicked-estate-store = { path = "../../../wicked-estate/crates/wicked-estate-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
sha2 = "0.10"
