[package]
name = "wicked-orchestration"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Vendored into wicked-core (was crates.io 0.3.0, yanked). Workflow/phase orchestration over the wicked-estate graph."
publish = false

[dependencies]
wicked-apps-core = { path = "../wicked-apps-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
